--- a/src/app/projects/ProjectsPage.css
+++ b/src/app/projects/ProjectsPage.css
@@ -40,7 +40,8 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #ddd;
+  background-color: #c938d6;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
